--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -44,6 +44,9 @@
 		We built this game in 48 hours for Global Game Jam 2024 using Unity.
 		The goal is to wrangle in antagonistic clowns with your trusty lasso.
 	</p>
+	
+	<h2>lasso</h2>
+	
 	<p>
 		I was responsible for the lasso mechanic using  
 		<a href="http://obi.virtualmethodstudio.com/" target="_blank">Obi Rope</a>. 
@@ -61,6 +64,8 @@
 		and its fun to hear it whiz around your head.
 	</p>
 	
+	<h2>environment</h2>
+	
 	<a href="lasso/scene.png" target="_blank"><img src="lasso/scene.png"></a>
 	
 	<p>
@@ -77,6 +82,7 @@
 		crisp 3000x3000+ resolution, much higher than default.  -->
 	</p>
 	
+	<h2>download &amp; source</h2>
 	<p>
 		You can download the game for Oculus Quest from  
 		<a href="https://github.com/Clownboys/lasso">Github</a> or 
