--- a/portfolio/virutallab.html
+++ b/portfolio/virutallab.html
@@ -43,7 +43,7 @@
 		access to curriculum-necessary lab equipment.
 	</p>
 	
-	<h2>3D prop art</h2>
+	<h2>3D artwork</h2>
 	
 	<p>
 		I was responsible for the lab's 3D models. 
