--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -82,8 +82,8 @@
 	<p>
 		Over-exposed light trails are a lightsaber signature.
 		While still a prototype, it just wouldn't be the same without them.
-		I achieve these with a simple custom mesh trail with a fixed topology.
-		I move existing vertices rather than regenerating the whole mesh like other systems.
+		I achieve these with a simple custom mesh trail with a fixed topology, 
+		existing vertices rather than regenerating the whole mesh.
 	</p>
 	
 	<a href="mocap/scene1.png" target="_blank"><img src="mocap/scene1.png"></a>
