--- a/portfolio/mocap.html
+++ b/portfolio/mocap.html
@@ -37,8 +37,8 @@
 	
 	<h2>tl;dr</h2>
 	<p>
-		This is a prototype VR multiplayer sword dueling game.
-		I created it using Unity, an OptiTrack stage, and several CC0 art assets.
+		This is a prototype VR multiplayer sword dueling game
+		using Unity, an OptiTrack stage, and several CC0 art assets.
 		Two players face off with physical foam swords on a motion capture stage.
 		The capture data is streamed to the VR headsets to drive visuals that align 
 		with the real world. 
@@ -82,8 +82,8 @@
 	<p>
 		Over-exposed light trails are a lightsaber signature.
 		While still a prototype, it just wouldn't be the same without them.
-		I achieve these with a simple custom mesh trail with a fixed topology, 
-		existing vertices rather than regenerating the whole mesh.
+		I achieve these with a simple custom mesh trail with a fixed topology 
+		moving existing vertices rather than regenerating the whole mesh.
 	</p>
 	
 	<a href="mocap/scene1.png" target="_blank"><img src="mocap/scene1.png"></a>
