--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -68,12 +68,17 @@
 		<a href="https://polyhaven.com/" target="_blank">PolyHaven</a>,
 		one of which I projected onto a heavily modified mesh initially created using 
 		<a href="https://github.com/isl-org/ZoeDepth" target="_blank">ZoeDepth</a>
-		to create the terrain.
-		
+		to create the terrain. This gives the environment just enough depth to look
+		convincing as long as you don't stray too far from the center (which you aren't
+		supposed to do in the first place).
+	</p>
+	<p>
+		Because of how simple the environment is, the game can renders at a 
+		crisp 3000x3000+ resolution, much higher than default.
 		
 		<!-- This gives the environment just enough depth to look convincing 
 		as long as you don't stray too far from the center. 
-		Because of how basic the environment is, the game can render at a 
+		Because of how simple the environment is, the game can render at a 
 		crisp 3000x3000+ resolution, much higher than default.  -->
 	</p>
 	
