--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -78,7 +78,7 @@
 		supposed to do in the first place).
 	</p>
 	<p>
-		Because of how simple the environment is, the game can renders at a 
+		Because of how simple the environment is, the game renders at a 
 		crisp 3000x3000+ resolution, much higher than default.
 		
 		<!-- This gives the environment just enough depth to look convincing 
