--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -60,7 +60,8 @@
 	
 	<p>
 		The lasso's speed modulates the volume and pitch of a spatial 'swoosh' 
-		sound. This provides natural awareness of the rope's speed and position, 
+		sound. This provides natural awareness of the rope's speed and position
+		in lieu of force feedback, 
 		and its fun to hear it whiz around your head.
 	</p>
 	
