--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -34,12 +34,16 @@
 		style = "height:100%;"allowfullscreen></iframe>
 	</div>
 	
+	<h2>tl;dr</h2>
+	
 	<p>
 		Made together with 
 		<a href="https://jake-white.github.io/" target="_blank">Jake White</a>
 		and 
-		<a href="https://www.rcac.purdue.edu/about/staff/gtakahas" target="_blank">George Takahashi</a>, 
+		<a href="https://www.rcac.purdue.edu/about/staff/gtakahas" target="_blank">George Takahashi</a>
+		using Unity, 
 		this is a game we call <i>Learn the Ropes</i>.
+		I was responsible for the lasso mechanic and the environment using third party assets.
 		Part of its namesake comes from its admittedly difficult technique-based gameplay.
 		We built this game in 48 hours for Global Game Jam 2024 using Unity.
 		The goal is to wrangle in antagonistic clowns with your trusty lasso.
