--- a/portfolio/lasso.html
+++ b/portfolio/lasso.html
@@ -40,8 +40,7 @@
 		Made together with 
 		<a href="https://jake-white.github.io/" target="_blank">Jake White</a>
 		and 
-		<a href="https://www.rcac.purdue.edu/about/staff/gtakahas" target="_blank">George Takahashi</a>
-		using Unity, 
+		<a href="https://www.rcac.purdue.edu/about/staff/gtakahas" target="_blank">George Takahashi</a>,
 		this is a game we call <i>Learn the Ropes</i>.
 		I was responsible for the lasso mechanic and the environment using third party assets.
 		Part of its namesake comes from its admittedly difficult technique-based gameplay.
