--- a/about.html
+++ b/about.html
@@ -19,14 +19,15 @@
 
     <h1>about</h1>
     <p>
-		My name is Julian Triveri. I'm a undergrad at Purdue University 
-		and a full-time associate research software engineer at the 
+		I'm Julian Triveri, an undergrad at Purdue University 
+		and a full-time research software engineer at the 
 		<a href="https://www.rcac.purdue.edu/envision">Purdue Envision Center</a>.
 	</p>
 	
 	<p>
-		I have experience in real-time 3D art, basic animation, and high-level programming, and I'm currently
-		expanding my skill-set to include graphics and low-level programming.
+		I have experience in real-time 3D art, basic animation, 
+		and scripting / high-level programming, and I'm currently 
+		exploring graphics and lower-level programming.
     </p>
 	
     <p>
@@ -38,19 +39,19 @@
 		where problem solving and clever tricks make all the difference. 
     </p>
 	
-	<br>
+	<!-- <br>
 	<p>
 		I have extensive experience with:
 	</p>
 		<ul>
-			<li> Unity
+			<li> <b>Unity</b>
 			<ul> 
 				<li> C# scripting
 				<li> Meta Quest / OpenXR
 				<li> XR Interaction Toolkit
 				<li> Obi Rope
 			</ul>
-			<li> Blender
+			<li> <b>Blender</b>
 			<ul>
 				<li> Cycles
 				<li> Geometry Nodes
@@ -70,7 +71,7 @@
 			<li> Javascript
 			<li> Blender rigging
 			<li> Character modeling & animation
-		</ul>
+		</ul> -->
 	
 	<!-- <p> 
 		If I can be candid and a little unprofessional for a moment, 
