--- a/portfolio/virutallab.html
+++ b/portfolio/virutallab.html
@@ -18,7 +18,7 @@
 <article>
 	<h1>nuclear engineering<br>virtual education</h1>
 	<h3>
-		A simulated lab space for Purdue University's Nuclear Engineering department.<br>
+		Built in Unity. Mostly solo project - responsible for nearly all visuals and scripting.<br>
 	
 		<img class="software-icon" src="/resources/icons/unity.png">
 		<img class="software-icon" src="/resources/icons/blender.png">
@@ -45,6 +45,16 @@
 	
 	<h2>3D artwork</h2>
 	
+	<div class="webvid verticalvid">
+		<iframe src="virtuallab/tbexport.html"></iframe>
+	</div>
+	
+	<p>
+		<a style="font-family:title;" href="virtuallab/tbexport.html" target="_blank">
+			Fullscreen >>>
+		</a>
+	</p>
+	
 	<p>
 		I was responsible for the lab's 3D models. 
 		The program is designed so that a student should be able to easily
@@ -55,27 +65,24 @@
 		and scratches that grace their real counterparts. -->
 	</p>
 	
+	<a href="virtuallab/Screenshot_1.png" target="_blank"><img src="virtuallab/Screenshot_1.png"></a>
+	
 	<p>
 		These were all made using Blender, 
 		Substance Painter, and Marmoset Toolbag.
 		Light is baked into all static meshes using Blender Cycles. 
 	</p>
 	
-	<div class="webvid verticalvid">
-		<iframe src="virtuallab/tbexport.html"></iframe>
-	</div>
+	<a href="virtuallab/Screenshot_2.png" target="_blank"><img src="virtuallab/Screenshot_2.png"></a>
 	
-	<p>
-		<a style="font-family:title;" href="virtuallab/tbexport.html" target="_blank">
-			Fullscreen >>>
-		</a>
-	</p>
 	<p>
 		The program runs in a browser and is optimized for low-spec devices
 		such as Chromebooks and tablets.
 		There are max 25k triangles rendered in 22 draw events.
 		The program's load size is shy of 50mb.
 	</p>
+	
+	<a href="virtuallab/Screenshot_3.png" target="_blank"><img src="virtuallab/Screenshot_3.png"></a>
 	
 	<h2>programming</h2>
 	
@@ -86,8 +93,14 @@
 		Like the 3D artwork, everything is profiled and optimized for low-spec devices.
 	</p>
 	
-	<a href="virtuallab/Screenshot_1.png" target="_blank"><img src="virtuallab/Screenshot_1.png"></a>
+	<a href="virtuallab/flow.png" target="_blank">
+		<img src="virtuallab/flow.png"
+			style="margin:auto; max-height:400px; width:auto; display:block;">
+	</a>
 	
+	<!-- <video autoplay muted playsinline loop 
+			src="virtuallab/controls.mp4"
+			style="width:100%; max-height:300px; margin:auto;"></video> -->
 	
 	<p>
 		Running on web-assembly, this has to run on a single thread
@@ -99,7 +112,7 @@
 		in shaders for future extensions.
 	</p>
 	
-	<a href="virtuallab/Screenshot_2.png" target="_blank"><img src="virtuallab/Screenshot_2.png"></a>
+	<a href="virtuallab/editor.png" target="_blank"><img src="virtuallab/editor.png"></a>
 	
 	<p>
 		The only programming that I wasn't entirely responsible for
@@ -110,8 +123,6 @@
 		I also wasn't responsible for the cable dynamics, as these are done with
 		<a href="http://obi.virtualmethodstudio.com/" target="_blank">Obi Rope</a>.
 	</p>
-	
-	<a href="virtuallab/Screenshot_3.png" target="_blank"><img src="virtuallab/Screenshot_3.png"></a>
 
 	<p>
 		Completed late 2023
