--- a/portfolio/virutallab.html
+++ b/portfolio/virutallab.html
@@ -98,9 +98,20 @@
 			style="margin:auto; max-height:400px; width:auto; display:block;">
 	</a>
 	
+	<p>
+		All of these different systems are separated into assemblies.
+		For a project of this size, UnityEvents suffice to glue 
+		all of these together without becoming unwieldy. 
+		I'm very pleased with this architecture and 
+		I've already reused these systems for other virtual lab
+		projects several times.
+	</p>
+	
 	<!-- <video autoplay muted playsinline loop 
 			src="virtuallab/controls.mp4"
 			style="width:100%; max-height:300px; margin:auto;"></video> -->
+	
+	<a href="virtuallab/editor.png" target="_blank"><img src="virtuallab/editor.png"></a>
 	
 	<p>
 		Running on web-assembly, this has to run on a single thread
@@ -111,8 +122,6 @@
 		I'm planning on re-implement the equipment behavior 
 		in shaders for future extensions.
 	</p>
-	
-	<a href="virtuallab/editor.png" target="_blank"><img src="virtuallab/editor.png"></a>
 	
 	<p>
 		The only programming that I wasn't entirely responsible for
