--- a/about.html
+++ b/about.html
@@ -28,11 +28,15 @@
 		I have experience in real-time 3D art, basic animation, 
 		and scripting / high-level programming, and I'm currently 
 		exploring graphics and lower-level programming.
+		I like wearing many hats 
+		and I'm always looking for new ones to try on.
     </p>
 	
     <p>
-		While I believe that form should always follow function,
-		I still have a keen interest in design and aesthetics.
+		I believe that form should always follow function,
+		and I never want to compromise functionality for
+		flashiness,
+		but I still have a keen interest in design and aesthetics.
 		I especially love creating refined visuals for 
 		performance-constrained platforms such as web and mobile VR. 
 		Working within such constraints requires a more human touch
