--- a/more.html
+++ b/more.html
@@ -26,6 +26,9 @@
 		<li><a href="https://github.com/cellomonster" target="_blank">
 			Old Github >>>
 		</a>
+		<li><a href="/archive/index.html" target="_blank">
+			High-school archive >>>
+		</a>
 		<li><a href="https://www.youtube.com/@trev3d/videos" target="_blank">
 			Youtube >>>
 		</a>
