--- a/portfolio/virutallab.html
+++ b/portfolio/virutallab.html
@@ -18,7 +18,7 @@
 <article>
 	<h1>nuclear engineering<br>virtual education</h1>
 	<h3>
-		Built in Unity. Mostly solo project - responsible for nearly all visuals and scripting.<br>
+		Built in Unity. Mostly solo project - responsible for nearly all artwork, visuals, and scripting.<br>
 	
 		<img class="software-icon" src="/resources/icons/unity.png">
 		<img class="software-icon" src="/resources/icons/blender.png">
