--- a/portfolio/virutallab.html
+++ b/portfolio/virutallab.html
@@ -86,6 +86,8 @@
 	
 	<h2>programming</h2>
 	
+	<a href="virtuallab/editor2.png" target="_blank"><img src="virtuallab/editor2.png"></a>
+	
 	<p>
 		Built on Unity, I'm responsible for most of this project's scripting.
 		This includes UI, 3D equipment controls, object manipulation, 
@@ -122,6 +124,8 @@
 		I'm planning on re-implement the equipment behavior 
 		in shaders for future extensions.
 	</p>
+	
+	<a href="virtuallab/editor3.png" target="_blank"><img src="virtuallab/editor3.png"></a>
 	
 	<p>
 		The only programming that I wasn't entirely responsible for
