--- a/portfolio/virutallab.html
+++ b/portfolio/virutallab.html
@@ -97,16 +97,13 @@
 	
 	<a href="virtuallab/flow.png" target="_blank">
 		<img src="virtuallab/flow.png"
-			style="margin:auto; max-height:400px; width:auto; display:block;">
+			style="margin:auto; max-height:400px; width:auto; max-width:100%; display:block;">
 	</a>
 	
 	<p>
 		All of these systems are separated into assemblies.
 		For a project of this size, UnityEvents suffice to glue 
-		all these together without becoming unwieldy. 
-		I'm very pleased with this architecture and 
-		I've already reused these systems in several other virtual lab
-		projects.
+		these together without becoming unwieldy.
 	</p>
 	
 	<!-- <video autoplay muted playsinline loop 
