--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 		I have experience in real-time 3D art, basic animation, 
 		and scripting / high-level programming, and I'm currently 
 		exploring graphics and lower-level programming.
-		I like wearing many hats 
+		I like wearing multiple hats 
 		and I'm always looking for new ones to try on.
     </p>
 	
