--- a/portfolio/snowman.html
+++ b/portfolio/snowman.html
@@ -47,7 +47,8 @@
 	</div>
 	<p>
 		Originally a final for a lighting course, 
-		I'd like to flesh this out in the future.
+		I'd like to flesh this out in the future. 
+		The animation is very simple for now.
 		I'm responsible for everything here.
 	</p>
 
