--- a/portfolio/virutallab.html
+++ b/portfolio/virutallab.html
@@ -66,10 +66,10 @@
 			<li>I wrote the line graph &amp; histogram shaders
 				and prepared the equipment models to use them.
 			<li>Some non-static objects cast custom soft-shadow decals.
-			<li>I created specific reflections cubemaps for 
+			<li>I created specific reflection cubemaps for 
 				many non-static objects to prevent incorrect specular highlights.
 			<li>Lighting is baked directly into equipment textures
-				since I know each only appears once. 
+				since each only appears once. 
 	</ul>
 	
 	<a href="virtuallab/Screenshot_1.png" target="_blank"><img src="virtuallab/Screenshot_1.png"></a>
