--- a/about.html
+++ b/about.html
@@ -19,10 +19,20 @@
 
     <h1>about</h1>
     <p>
-		I'm Julian Triveri, an undergrad at Purdue University 
-		and a full-time research software engineer at the 
-		<a href="https://www.rcac.purdue.edu/envision">Purdue Envision Center</a>.
+		I'm Julian Triveri, a
+		full-time research software engineer at the 
+		<a href="https://www.rcac.purdue.edu/envision">Purdue Envision Center</a>
+		and a part-time undergrad at Purdue University in the US.
 	</p>
+	
+	<p>
+		I believe that form should always follow function,
+		but I still have a keen interest in design and aesthetics.
+		I like creating unexpectedly refined visuals for 
+		performance-constrained platforms such as web and mobile VR. 
+		Working within such constraints requires a more human touch
+		where problem solving and clever tricks make all the difference. 
+    </p>
 	
 	<p>
 		I have experience in real-time 3D art, basic animation, 
@@ -30,17 +40,6 @@
 		exploring graphics and lower-level programming.
 		I like wearing multiple hats 
 		and I'm always looking for new ones to try on.
-    </p>
-	
-    <p>
-		I believe that form should always follow function,
-		and I never want to compromise functionality for
-		flashiness,
-		but I still have a keen interest in design and aesthetics.
-		I especially love creating refined visuals for 
-		performance-constrained platforms such as web and mobile VR. 
-		Working within such constraints requires a more human touch
-		where problem solving and clever tricks make all the difference. 
     </p>
 	
 	<!-- <br>
