--- a/portfolio/virutallab.html
+++ b/portfolio/virutallab.html
@@ -134,10 +134,8 @@
 	</p>
 	<p>
 		Supporting a variety of devices means supporting a variety of aspect ratios. 
-		I wrote an editor tool to create 'frames' that the user can navigate between. 
-		Users navigate between frames which position the camera 
-		so that anything within the frame is visible on any aspect ratio.
-		A simple camera rig pans the camera between these frames.
+		I wrote an editor tool for creating camera 'frames' which position the camera 
+		so that everything fits into view regardless of aspect ratio. 
 	</p>
 	<p>
 		The controls also must be large enough for the user to easily
