update virtual lab and about

--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
 		but I still have a keen interest in design and aesthetics.
 		I like creating unexpectedly refined visuals for 
 		performance-constrained platforms such as web and mobile VR. 
-		Working within such constraints requires a more human touch
-		where problem solving and clever tricks make all the difference. 
+		Working within constraints requires a more human touch
+		where creative problem solving and clever tricks make all the difference. 
     </p>
 	
 	<p>
