--- a/portfolio/virtuallab/tbexport.html
+++ b/portfolio/virtuallab/tbexport.html
@@ -12,7 +12,7 @@
 		// marmoset.largeUI = true;
 		// marmoset.transparentBackground = true;
 		
-		marmoset.noUserInterface = true;
+		// marmoset.noUserInterface = true;
 		
 		var viewer = marmoset.embed('tbexport.mview', { fullFrame: true });
 		
